--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,12 @@
-pandas>=1.3.0
-numpy>=1.21.0
-python-docx>=0.8.11
-matplotlib>=3.5.0
-seaborn>=0.11.0
+# Data Processing
+pandas>=2.0.0
+numpy>=1.24.0
+
+# Document Generation
+python-docx>=1.1.0
+
+# Utilities
+tqdm>=4.65.0
+python-dotenv>=1.0.0
+
+boto3>=1.34.0
